# PRODIGY_BD_03

./: README.md  config.py  extensions.py  pyproject.toml  requirements.txt  run.py
api/: __init__.py
api/auth/: __init__.py  login.py  logout.py  register.py
api/migrations/versions/: 1ba579b2da32_initial_migration.py  ac5b93d5fbd5_changed_password_length_of_user_model.py  c16c1e2590c2_added_role_in_user.py
api/models/: UserModel.py
api/routes/: __init__.py
api/routes/home/: __init__.py  route.py
api/routes/users/: __init__.py  route.py
api/utils/: __init__.py  role.py  roletype.py
